# ekyc-ldrnet

./: .gitignore  App.tsx  agent_prompt_ekyc_final.md  agent_prompt_ekyc_screens.md  app.json  babel.config.js  index.js  liveness_both.txt  liveness_capture.txt  liveness_capture10.txt  liveness_capture2.txt  liveness_capture3.txt  liveness_capture4.txt  liveness_capture5.txt  liveness_capture6.txt  liveness_capture7.txt  liveness_capture8.txt  liveness_capture9.txt  liveness_screen.txt  liveness_spoof.txt  logcat_output.txt  metro.config.js  package-lock.json  package.json  tsconfig.json
android/: build.gradle  gradle.properties  local.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  CardDetector.cpp  CardDetector.h  CardDetectorJNI.cpp
android/app/src/main/cpp/validation/: CardSideClassifier.cpp  CardSideClassifier.h  LivePresenceValidator.h  OfficialCINValidator.cpp  OfficialCINValidator.h  ScreenDetector.cpp
android/app/src/main/cpp/warp/: CardWarper.cpp  CardWarper.h
ekyc-attijeri/: .gitignore  App.tsx  CIN_INTEGRATION_GUIDE.md  README.md  app.json  babel.config.js  package-lock.json  package.json
ekyc-attijeri/android/: settings.gradle
ekyc-attijeri/android/app/: build.gradle
ekyc-attijeri/src/components/: AttijariLogo.tsx  CINFrameRecto.tsx  CINFrameVerso.tsx  CINScanFrame.tsx  CaptureFailOverlay.tsx  CaptureSuccessOverlay.tsx  CaptureTransition.tsx  CompletionRing.tsx  RippleRing.tsx  (+3 more)
screenss/: attijari_cin_scan_screens.html  screen 1.html  screen2.html
src/: index.ts
src/components/: CINFrameRecto.tsx  CINFrameVerso.tsx  CINScanFrame.tsx  CaptureTransition.tsx  CardOverlay.tsx  TimeoutReminder.tsx
src/constants/: theme.ts
src/frameProcessor/: detectCard.ts
src/hooks/: useCardDetection.ts  useDetectionTimeout.ts
src/native/: BarcodeService.ts  CardDetectorModule.ts
src/screens/: CameraScreen.tsx  OnboardingScreen.tsx  ResultScreen.tsx  WarpTestScreen.tsx
src/types/: cardDetection.ts
(+66 files in other folders)
